clean up ef core
